fix: mobile MiniToc z-index

--- a/src/components/DocLayout/DocLayout.scss
+++ b/src/components/DocLayout/DocLayout.scss
@@ -89,7 +89,7 @@
             position: sticky;
             top: calc(var(--dc-header-height) - 1px);
             left: 0;
-            z-index: 119;
+            z-index: 118;
 
             height: fit-content;
             width: 100%;
